compiler/tests/ar/errors/pure_fnval.salam
// لغة: العربية
// EXPECT: E012
نقي دالة طبق(f : دالة (صحيح) صحيح, x : صحيح) : صحيح:
    أرجع f(x)
نهاية

دالة الرئيسية:
    g : تلقائي = (v : صحيح) => v + 1
    اطبع(طبق(g, 4))
نهاية
